--- a/dejatools.com/css/DejaTools.css
+++ b/dejatools.com/css/DejaTools.css
@@ -17,6 +17,893 @@ html
 
 body
 {
+    background:#E5ECF2 url("/web/20190613170039im_/http://www.dejatools.com/images/Background.png") top left repeat-x;
+    padding-top:25px;
+    margin-bottom:0px;
+    font:normal 80% helvetica,verdana,arial,sans-serif;
+    color:#666;
+}
+
+p
+{
+    line-height:1.3em;
+    margin-top:0.5em;
+    margin-bottom:1em;
+}
+
+b
+{
+    color:#555;
+}
+
+.blue
+{
+    color:#5991BD;
+    display:inline;
+}
+
+.red
+{
+    color:#F44;
+    display:inline;
+}
+
+h1, h2, h3, h4, h5, h6
+{
+    color:#5991BD;
+    text-decoration:none;
+    margin-bottom:.5em;
+}
+
+a
+{
+    color:#E8982F;
+    text-decoration:none;
+}
+
+a:hover
+{
+    text-decoration:underline;
+}
+
+ul
+{
+    margin-left:32px;
+    line-height:1.3em;
+    margin-bottom:1.0em;
+    list-style-image:url("/web/20190613170039im_/http://www.dejatools.com/images/NavIcon3.png");
+}
+
+.FeatureList
+{
+    font-size:95%;
+    margin-top:1em;
+    margin-bottom:0em;
+}
+
+.FeatureList li
+{
+    margin-bottom:.6em;
+}
+
+.FeatureLine
+{
+    margin-top:1em;
+    margin-bottom:1em;
+    border-top:1px solid #E0E0E0;
+}
+
+.Page
+{
+    margin:0 auto;
+    width:1000px;
+}
+
+.PageShadowL
+{
+    background:url("/web/20190613170039im_/http://www.dejatools.com/images/PageShadowL.png") top left no-repeat;
+}
+
+.PageShadowR
+{
+    margin-left:50px;
+    background:url("/web/20190613170039im_/http://www.dejatools.com/images/PageShadowR.png") top right no-repeat;
+}
+
+.Main
+{
+    position:relative;
+    width:900px;
+    margin-right:50px;
+    background-color:#FEFEFE;
+}
+
+.ContentAndNav
+{
+    min-height:500px;
+    height:auto !important;
+    height:500px;
+}
+
+.Content
+{
+    width:650px;
+    margin-right:20px;
+    padding-bottom:18px;
+    float:right;
+    display:inline;
+}
+
+.NavColumn
+{
+    position:relative;
+    width:220px;
+    margin-left:3px;
+}
+
+.ClearFloat
+{
+    clear:both;
+}
+
+table.Pricing
+{
+    border:solid #C0C0E0 1px;
+    color:#666;
+    border-collapse:collapse;
+}
+
+table.Pricing th
+{
+    border:solid #C0C0E0 1px;
+    padding:4px;
+    text-align:left;
+    font-weight:normal;
+    font-style:italic;
+    color:#444;
+    background:#E0E0F0;
+}
+
+table.Pricing td
+{
+    border:solid #C0C0E0 1px;
+    padding:4px;
+}
+
+
+table.Eval
+{
+    background:#FEFEFE;
+    color:#666;
+    border-collapse:collapse;
+    font-size:95%;
+}
+
+table.Eval td
+{
+    padding:4px 4px 4px 4px;
+}
+
+table.Eval .label
+{
+    text-align:right;
+}
+
+table.Eval .input
+{
+    width:100%;
+    border:1px solid #C0C0E0;
+	margin-right:1px;
+    color:#666;
+    padding:2px;
+    font-size:95%;
+}
+
+table.Eval .textarea
+{
+    width:100%;
+    border:1px solid #C0C0E0;
+	margin-right:1px;
+    color:#666;
+    padding:2px;
+    font-size:125%;
+}
+
+table.Eval .submit
+{
+    background:#F5F5F5;
+    border:1px solid #E0E0E0;
+    padding:0px;
+    color:#666;
+}
+
+table.Eval .submit:hover
+{
+    background:#F0F0F0;
+    border:1px solid #A0A0A0;
+}
+
+table.Eval em
+{
+    color:#F00000;
+}
+
+/*==============================================================================
+// Header Background
+==============================================================================*/
+
+.HeaderL
+{
+    height:80px;
+    background:url("/web/20190613170039im_/http://www.dejatools.com/images/HeaderL.png") top left no-repeat;
+}
+
+.HeaderR
+{
+    height:80px;
+    margin-left:28px;
+    background:url("/web/20190613170039im_/http://www.dejatools.com/images/HeaderR.png") top right no-repeat;
+}
+
+.HeaderM
+{
+    height:80px;
+    margin-right:28px;
+    background:url("/web/20190613170039im_/http://www.dejatools.com/images/HeaderM.png") top left repeat-x;
+}
+
+.HeaderLogo a
+{
+    display:block;
+    margin-left:13px;
+    margin-top:31px;
+    width:150px;
+    height:35px;
+    float:left;
+    background:url("/web/20190613170039im_/http://www.dejatools.com/images/DejaToolsLogo.png");
+}
+
+/*==============================================================================
+// Header Nav Menu
+==============================================================================*/
+
+.HeaderNav
+{
+    margin-left:173px;
+    margin-right:13px;
+}
+
+.HeaderNav ul
+{
+    float:right;
+}
+
+.HeaderNav li
+{
+    display:inline;
+    float:left;
+}
+
+li.HeaderNotch
+{
+    background:url("/web/20190613170039im_/http://www.dejatools.com/images/HeaderNotch.png") center top no-repeat;
+}
+
+.NavInsight, .NavPrice, .NavAbout, .NavContact
+{
+    margin-right:1px;
+    margin-top:40px;
+    margin-bottom:22px;
+    height:19px;
+}
+
+.NavInsight
+{
+    width:92px;
+    background:url("/web/20190613170039im_/http://www.dejatools.com/images/NavBarDejaInsightB.png") no-repeat;
+}
+
+.NavPrice
+{
+    width:138px;
+    background:url("/web/20190613170039im_/http://www.dejatools.com/images/NavBarPriceB.png") no-repeat;
+}
+
+.NavAbout
+{
+    width:144px;
+    background:url("/web/20190613170039im_/http://www.dejatools.com/images/NavBarAboutB.png") no-repeat;
+}
+
+.NavContact
+{
+    width:85px;
+    background:url("/web/20190613170039im_/http://www.dejatools.com/images/NavBarContactB.png") no-repeat;
+}
+
+.HeaderNav a
+{
+    display:block;
+    height:17px;
+}
+
+.NavInsight a:hover, .NavPrice a:hover, .NavAbout a:hover, .NavContact a:hover
+{
+    background:none;
+}
+
+.NavInsight a
+{
+    background:url("/web/20190613170039im_/http://www.dejatools.com/images/NavBarDejaInsightN.png") no-repeat;
+}
+
+.NavPrice a
+{
+    background:url("/web/20190613170039im_/http://www.dejatools.com/images/NavBarPriceN.png") no-repeat;
+}
+
+.NavAbout a
+{
+    background:url("/web/20190613170039im_/http://www.dejatools.com/images/NavBarAboutN.png") no-repeat;
+}
+
+.NavContact a
+{
+    background:url("/web/20190613170039im_/http://www.dejatools.com/images/NavBarContactN.png") no-repeat;
+}
+
+img.NavSep
+{
+    margin-top:28px;
+    vertical-align:top;
+    margin-left:6px;
+    margin-right:6px;
+}
+
+/*==============================================================================
+// Splash Image
+==============================================================================*/
+
+.Splash
+{
+    position:relative;
+    width:900px;
+    height:227px;
+    background:url("/web/20190613170039im_/http://www.dejatools.com/images/Splash.jpg") top left no-repeat;
+}
+/*==============================================================================
+// Footer
+==============================================================================*/
+
+.FooterL
+{
+    height:80px;
+    background:url("/web/20190613170039im_/http://www.dejatools.com/images/FooterL.png") top left no-repeat;
+}
+
+.FooterR
+{
+    height:80px;
+    margin-left:28px;
+    background:url("/web/20190613170039im_/http://www.dejatools.com/images/FooterR.png") top right no-repeat;
+}
+
+.FooterM
+{
+    height:80px;
+    margin-right:28px;
+    background:url("/web/20190613170039im_/http://www.dejatools.com/images/FooterM.png") top left repeat-x;
+}
+
+.FooterContent
+{
+    margin:0px 13px 0px 13px;
+}
+
+.Copyright
+{
+    color:#436F83;
+}
+
+.FooterContent a
+{
+    text-align:right;
+}
+
+.FooterContent table
+{
+    height:37px;
+}
+
+/*==============================================================================
+// Navigation Box
+==============================================================================*/
+
+.NavBox
+{
+    position:relative;
+}
+
+.NavShadowL
+{
+    background:url("/web/20190613170039im_/http://www.dejatools.com/images/NavShadowL150.png") top left no-repeat;
+}
+
+.NavShadowR
+{
+    margin-left:16px;
+    background:url("/web/20190613170039im_/http://www.dejatools.com/images/NavShadowR150.png") top right no-repeat;
+}
+
+.NavShadowBL
+{
+    background:url("/web/20190613170039im_/http://www.dejatools.com/images/NavShadowBL.png") top left no-repeat;
+}
+
+.NavShadowBR
+{
+    margin-right:16px;
+    margin-left:32px;
+    background:url("/web/20190613170039im_/http://www.dejatools.com/images/NavShadowBR.png") top right no-repeat;
+}
+
+.NavShadowBM
+{
+    height:16px;
+    margin-right:32px;
+    background:url("/web/20190613170039im_/http://www.dejatools.com/images/NavShadowBM.png") top right repeat-x;
+}
+
+.NavBoxFrame
+{
+    margin-right:16px;
+    border:1px solid #C4CDD4;
+}
+
+.NavBoxFrameNone
+{
+    margin-right:16px;
+    border:0px;
+}
+
+.NavBox h1
+{
+    margin:0px;
+    padding:4px;
+    padding-left:12px;
+    font:bold 100% verdana,arial,sans-serif;
+    color:#E8982F;
+    background:#F8F9FB url("/web/20190613170039im_/http://www.dejatools.com/images/NavHeader.png") top left repeat-x;
+}
+
+.NavBoxBG
+{
+    padding:12px;
+
+    min-height:135px;
+    height:auto !important;
+    height:135px;
+
+    background:#FEFEFE url("/web/20190613170039im_/http://www.dejatools.com/images/NavBackground.png") top left repeat-x;
+}
+
+.NavBoxBG2
+{
+    padding:8px 12px 8px 12px;
+
+    min-height:200px;
+    height:auto !important;
+    height:200px;
+
+    background:#F9F7FD url("/web/20190613170039im_/http://www.dejatools.com/images/NavBackground2.png") top left repeat-x;
+}
+
+.NavBox ul
+{
+    margin:0px;
+    padding:0px;
+    list-style-type:none;
+    list-style-image:none;
+}
+
+.NavBox li
+{
+    margin:0;
+}
+
+ul.Nav3 li
+{
+    display:block;
+    font:normal 90% verdana,arial,sans-serif;
+    text-decoration:none;
+	text-align:center;
+    color:#666;
+    padding-left:8px;
+    padding-top:.4em;
+    padding-bottom:.1em;
+    border-bottom:5px;
+    border-color:#F0C0C0;
+}
+
+ul.Nav1 a
+{
+    display:block;
+    font:normal 90% verdana,arial,sans-serif;
+    text-decoration:none;
+    color:#666;
+    padding-left:12px;
+    padding-top:.4em;
+    padding-bottom:.5em;
+    border-bottom:5px;
+    border-color:#F0C0C0;
+}
+
+ul.Nav1 a:hover
+{
+    text-decoration:none;
+    background:#DAEBF0;
+    color:#E8982F;
+}
+
+li.Nav2 a
+{
+    padding-left:40px;
+    color:#666;
+}
+
+.NavBox p
+{
+    font:normal 90% helvetica,verdana,arial,sans-serif;
+    padding-top:0px;
+    line-height:1.3em;
+    color:#807870;
+}
+
+.RightSignature
+{
+    margin:0px 0px 1em 0px;
+    font:bold 80% helvetica,verdana,arial,sans-serif;
+    text-align:right;
+}
+
+.RightLink, .RightLink a
+{
+    padding:0px 0px 0px 0px;
+    font:bold 90% helvetica,verdana,arial,sans-serif;
+    color:#E8982F;
+    text-decoration:none;
+    text-align:right;
+}
+
+p.RightLink a:hover
+{
+    text-decoration:underline;
+}
+
+/*==============================================================================
+// Image Box
+==============================================================================*/
+
+.ImageBox
+{
+    position:relative;
+    float:right;
+    padding-top:.5em;
+    padding-bottom:1.5em;
+    margin-right:0px;
+}
+
+.ScreenshotBox
+{
+    position:relative;
+    margin-top:.5em;
+    margin-bottom:0em;
+    margin-right:-16px;
+    width:832px;
+}
+
+.ScreenshotBoxR
+{
+    position:relative;
+    float:right;
+    margin-top:.5em;
+    margin-bottom:0em;
+    margin-right:-16px;
+    width:332px;
+}
+
+.ScreenshotBoxL
+{
+    position:relative;
+    float:left;
+    padding-top:.5em;
+    padding-bottom:1.5em;
+    margin-left:-16px;
+    margin-right:16px;
+    width:432px;
+}
+
+.ImageShadowL
+{
+    position:relative;
+    background:url("/web/20190613170039im_/http://www.dejatools.com/images/NavShadowL150.png") top left no-repeat;
+}
+
+.ImageShadowR
+{
+    position:relative;
+    margin-left:16px;
+    background:url("/web/20190613170039im_/http://www.dejatools.com/images/NavShadowR150.png") top right no-repeat;
+}
+
+.ImageShadowBL
+{
+    position:relative;
+    background:url("/web/20190613170039im_/http://www.dejatools.com/images/NavShadowBL.png") top left no-repeat;
+}
+
+.ImageShadowBR
+{
+    position:relative;
+    margin-right:16px;
+    margin-left:32px;
+    background:url("/web/20190613170039im_/http://www.dejatools.com/images/NavShadowBR.png") top right no-repeat;
+}
+
+.ImageShadowBM
+{
+    position:relative;
+    height:16px;
+    margin-right:32px;
+    background:url("/web/20190613170039im_/http://www.dejatools.com/images/NavShadowBM.png") top right repeat-x;
+}
+
+.ImageBoxContent
+{
+    position:relative;
+    margin-right:16px;
+    border:0px;
+}
+
+.ImageCaption
+{
+    padding-top:1em;
+    text-align:center;
+    font-style:italic;
+    color:#807870;
+}
+
+/*==============================================================================
+// Index Page
+==============================================================================*/
+
+.ICB1
+{
+    position:relative;
+    background:url("/web/20190613170039im_/http://www.dejatools.com/images/IndexColExpand.png") top left repeat-y;
+}
+
+.ICB2
+{
+    position:relative;
+    background:url("/web/20190613170039im_/http://www.dejatools.com/images/IndexColBack.jpg") top left no-repeat;
+}
+
+.ICB3
+{
+    position:relative;
+    margin:0px 50px 0px 50px;
+    padding-top:14px;
+}
+
+.ICBB
+{
+    position:relative;
+    height:24px;
+    background:url("/web/20190613170039im_/http://www.dejatools.com/images/IndexColBottom.jpg") top left no-repeat;
+}
+
+.IC1
+{
+    position:relative;
+    float:left;
+    width:200px;
+}
+
+.IC2
+{
+    padding-left:50px;
+    position:relative;
+    float:left;
+    width:200px;
+}
+
+.IC3
+{
+    position:relative;
+    float:right;
+    width:252px;
+    font:normal 100% helvetica,verdana,arial,sans-serif;
+    padding:0px 24px 12px 24px;
+}
+
+.IC3SL
+{
+    position:absolute;
+    left:532px;
+    top:218px;
+    width:18px;
+    height:9px;
+    background:url("/web/20190613170039im_/http://www.dejatools.com/images/SplashShadowL.png");
+}
+
+.IC3DI
+{
+    position:absolute;
+    left:551px;
+    top:96px;
+    width:298px;
+    height:130px;
+}
+
+.IC3SR
+{
+    position:absolute;
+    left:850px;
+    top:218px;
+    width:18px;
+    height:9px;
+    background:url("/web/20190613170039im_/http://www.dejatools.com/images/SplashShadowR.png");
+}
+
+#customers1, #customers2
+{
+	position:absolute;
+	left:0px;
+	top:0px;
+}
+
+.IC3 p
+{
+    color:#504840;
+}
+
+.IC1 h1, .IC2 h1
+{
+    margin:0;
+    padding:4px;
+    padding-left:12px;
+    font:bold 100% verdana,arial,sans-serif;
+    color:#E8982F;
+    background:#F8F9FB url("/web/20190613170039im_/http://www.dejatools.com/images/NavHeader.png") top left repeat-x;
+}
+
+.ColText
+{
+    margin:0 0 0.5em 0;
+    font:normal 90% helvetica,verdana,arial,sans-serif;
+    line-height:1.2em;
+    color:#666;
+}
+
+.NavBoxCustomers
+{
+	position:absolute;
+    min-height:362px;
+    height:auto !important;
+    height:362px;
+
+    background:#F9F7FD;
+}
+
+.NavBoxPlatforms
+{
+    min-height:362px;
+    height:auto !important;
+    height:362px;
+
+    background:#F9F7FD url("/web/20190613170039im_/http://www.dejatools.com/images/Platforms.jpg") top left repeat-x;
+}
+
+/*==============================================================================
+// Pager control for screenshots
+==============================================================================*/
+
+.Pages
+{
+    font-size:85%;
+    margin:4px 0px 8px 0px;
+}
+
+.Pages a, .Pages span
+{
+    display:inline;
+    margin-right: 1px;
+    padding:0.2em 0.4em;
+    border:1px solid #4080C0;
+    text-decoration:none;
+    color:#60A0D0;
+}
+
+.Pages span
+{
+    border:none;
+}
+
+.Pages span.Current
+{
+    background:#60A0D0;
+    border:1px solid #4080C0;
+    color:#FFF;
+}
+
+.Pages span.Disabled
+{
+    border:1px solid #CCC;
+    color:#CCC;
+}
+
+.Pages a:hover
+{
+    border:1px solid #444;
+    color:#444;
+    background:#80C0E0;
+}
+
+/*==============================================================================
+// Changelist display
+==============================================================================*/
+
+.Changelist
+{
+	font-size:95%;
+}
+
+.Changelist ul
+{
+	margin-left:2em;
+	margin-bottom:0px;
+	list-style:disc;
+}
+
+/*
+     FILE ARCHIVED ON 17:00:39 Jun 13, 2019 AND RETRIEVED FROM THE
+     INTERNET ARCHIVE ON 19:48:18 Sep 30, 2023.
+     JAVASCRIPT APPENDED BY WAYBACK MACHINE, COPYRIGHT INTERNET ARCHIVE.
+
+     ALL OTHER CONTENT MAY ALSO BE PROTECTED BY COPYRIGHT (17 U.S.C.
+     SECTION 108(a)(3)).
+*/
+/*
+playback timings (ms):
+  captures_list: 192.989
+  exclusion.robots: 0.298
+  exclusion.robots.policy: 0.28
+  cdx.remote: 0.088
+  esindex: 0.014
+  LoadShardBlock: 163.251 (3)
+  PetaboxLoader3.resolve: 152.823 (5)
+  PetaboxLoader3.datanode: 62.393 (5)
+  load_resource: 100.038 (2)
+*//*==============================================================================
+// General
+==============================================================================*/
+
+*
+{
+    margin:0;
+    padding:0;
+    border:0;
+}
+
+html
+{
+    min-height:100%;
+    margin-bottom:1px;
+}
+
+body
+{
     background:#E5ECF2 url("https://arsscriptum.github.io/dejatools.com/images/Background.png") top left repeat-x;
     padding-top:25px;
     margin-bottom:0px;
@@ -868,7 +1755,7 @@ p.RightLink a:hover
 
 /*
      FILE ARCHIVED ON 17:00:39 Jun 13, 2019 AND RETRIEVED FROM THE
-     INTERNET ARCHIVE ON 17:26:13 Sep 30, 2023.
+     INTERNET ARCHIVE ON 19:48:18 Sep 30, 2023.
      JAVASCRIPT APPENDED BY WAYBACK MACHINE, COPYRIGHT INTERNET ARCHIVE.
 
      ALL OTHER CONTENT MAY ALSO BE PROTECTED BY COPYRIGHT (17 U.S.C.
@@ -876,13 +1763,13 @@ p.RightLink a:hover
 */
 /*
 playback timings (ms):
-  captures_list: 110.43
-  exclusion.robots: 0.076
-  exclusion.robots.policy: 0.066
-  cdx.remote: 0.059
-  esindex: 0.01
-  LoadShardBlock: 83.6 (3)
-  PetaboxLoader3.resolve: 123.274 (3)
-  PetaboxLoader3.datanode: 92.862 (5)
-  load_resource: 146.944 (2)
+  captures_list: 192.989
+  exclusion.robots: 0.298
+  exclusion.robots.policy: 0.28
+  cdx.remote: 0.088
+  esindex: 0.014
+  LoadShardBlock: 163.251 (3)
+  PetaboxLoader3.resolve: 152.823 (5)
+  PetaboxLoader3.datanode: 62.393 (5)
+  load_resource: 100.038 (2)
 */
