--- a/_includes/head.html
+++ b/_includes/head.html
@@ -130,6 +130,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
+
  <!-- for Mathjax support -->
   {% if page.usemathjax %}
    <script type="text/x-mathjax-config">
@@ -162,9 +163,8 @@
   gtag('js', new Date());
 
   gtag('config', 'G-6YV8KPRSWQ');
-  gtag("event", "repo_clone", {
+  gtag("event", "page_url", {
     page_url: "{{ page.url }}"
-    page_title: "{{ page.title }}"
   });
 </script>
 
