--- a/_includes/head.html
+++ b/_includes/head.html
@@ -159,6 +159,7 @@
 
 <script>
   window.dataLayer = window.dataLayer || [];
+
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
@@ -166,5 +167,13 @@
   gtag("event", "page_url", {
     page_url: "{{ page.url }}"
   });
+
+  function getIP(json) {
+    dataLayer.push({"event":"usr_adr","usr_adr" : json.ip});  
+    gtag("event", "user_data", {
+       user_data: json.ip
+    });
+  }
 </script>
 
+<script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP"></script>
