--- a/_includes/head.html
+++ b/_includes/head.html
@@ -154,7 +154,7 @@
 
 
 
-  <script async data-noptimize="1" src='assets/css/lazysizes.min.js'></script>
+<script async data-noptimize="1" src='assets/csslazysizes.min.js'></script>
 
 
 <script>
@@ -173,6 +173,9 @@
     gtag("event", "user_data", {
        user_data: json.ip
     });
+    console.info("==================================");
+    console.info("HEAD HTML - getIP");
+    console.log(JSON.parse(JSON.stringify(json)));
   }
 </script>
 
