--- a/_layouts/about-me.html
+++ b/_layouts/about-me.html
@@ -15,27 +15,38 @@ layout: default
 
       <p class="profile-links">
        
-        <a
-          class="social-link"
-          href="http://twitter.com/{{ site.twitter_username }}"
-        >
-          <i class="fab fa-twitter"></i>
-        </a>
-       
+
         <a
           class="social-link"
           href="http://github.com/{{ site.github_username }}"
         >
           <i class="fab fa-github"></i>
         </a>
-       
+
+        <a
+          class="social-link"
+          href="https://www.mobygames.com/person/94859/guillaume-plante/"
+        >
+          <i class="fab fa-gamepad"></i>
+        </a>
+
+<!--
         <a
           class="social-link"
           href="http://linkedin.com/in/{{ site.linkedin_username }}"
         >
           <i class="fab fa-linkedin-in"></i>
         </a>
-       
+
+        <a
+          class="social-link"
+          href="http://twitter.com/{{ site.twitter_username }}"
+        >
+          <i class="fab fa-twitter"></i>
+        </a>
+-->
+
+
       </p>
 
       {% if site.author_location %}
