--- a/_layouts/about-me.html
+++ b/_layouts/about-me.html
@@ -27,17 +27,17 @@ layout: default
           class="social-link"
           href="https://www.mobygames.com/person/94859/guillaume-plante/"
         >
-          <i class="fab fa-gamepad"></i>
+          <i class="fab fa-gear"></i>
         </a>
 
-<!--
+
         <a
           class="social-link"
           href="http://linkedin.com/in/{{ site.linkedin_username }}"
         >
           <i class="fab fa-linkedin-in"></i>
         </a>
-
+<!--
         <a
           class="social-link"
           href="http://twitter.com/{{ site.twitter_username }}"
