--- a/_layouts/about-me.html
+++ b/_layouts/about-me.html
@@ -27,7 +27,7 @@ layout: default
           class="social-link"
           href="https://www.mobygames.com/person/94859/guillaume-plante/"
         >
-          <i class="fab fa-gear"></i>
+          <i class="fab fa-stumbleupon"></i>
         </a>
 
 
@@ -37,6 +37,14 @@ layout: default
         >
           <i class="fab fa-linkedin-in"></i>
         </a>
+
+        <a
+          class="social-link"
+          href="https://soundcloud.com/guillaume-plante"
+        >
+          <i class="fab fa-soundcloud"></i>
+        </a>
+
 <!--
         <a
           class="social-link"
